ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:														  \
|		 - GUI:													  |
|				* to fix: no errors on adding user (custom HP)	  |
\_________________________________________________________________/

2008-01-07 Christian Hernmarck
	- TOOLS:
		* Fixed #937 (but reopened #714): some php errors in pma theme
		* Added some goodies: - a check while reading the config-variables if all are present
		*	- a small shell script which could be run before ispcp-setup

2008-01-07 Benedikt Heintel
	- TOOLS:
		* Fixed #933: Webmail layout

2008-01-06 Benedikt Heintel
	- ENGINE:
		* Fixed #944: Error in Backupengine

2007-12-21 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)

2007-12-17 Jochen Manz
	- GUI:
		* Fixed #935: Admin created date is everytime N/A
		* Fixed #936: The Gender field in Orderpanel is not as it should

2007-12-17 Christian Hernmarck
	- GUI:
		*Fixed #924: Alias order notification sent to customer

2007-12-16 Benedikt Heintel
	- GUI:
		* Added: Gender patch (thanks to Jochen Manz)
	- TOOLS:
		* Fixed: Templates of Squirrelmail (new template version)
		* Added: Squirrelmail Translations

2007-12-15 Benedikt Heintel
	- TOOLS:
		* Fixed #714: undefined index in pma-style sheet (thanks to Christian Hernmarck)
		* Update Squirrelmail to version 1.4.13 (#932)

2007-12-13 Benedikt Heintel
	- TOOLS:
		* Fixed #922: Filemanger doesn't handle errors on login...
		* Fixed #929: Filemanager prints undefined offset when viewing directory details

2007-12-12 Malte Geierhos
	- GUI:
		* Fixed empty page when changing reseller-lostpassword mails

2007-12-10 Christian Hernmarck
	- SETUP:
		* Fixed #921: 2 backup cron jobs in one logfile

2007-12-09 Benedikt Heintel
	- SETUP:
		* Fixed #835: Add awstats_updateall.pl to logrotate config
		* Fixed #876: Correct DNS Minimum interval
		* Fixed #913: wrong dns zone file