@@ -24,8 +24,6 @@
     ErrorDocument 500 /errors/500.html
     ErrorDocument 503 /errors/503.html
 
-    Redirect /ispcp http://{BASE_SERVER_VHOST}
-
     <IfModule mod_cband.c>
         CBandUser {DMN_GRP}
     </IfModule>
