@@ -4,13 +4,11 @@
 # http://isp-control.net
 #
 
-# Any adding & removing of variables should also be made in ispcp/gui/include/ispcp-config.php!
-
 #
 # Misc config variables
 #
 
-BuildDate = 20080106
+BuildDate = 20080112
 
 Version = 1.0.0 RC3 OMEGA
 
